removed invalid pretraining data

--- a/notebooks/convert_pretrain_dataset_to_x86.ipynb
+++ b/notebooks/convert_pretrain_dataset_to_x86.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "d07c397f",
       "metadata": {},
       "outputs": [],
@@ -13,7 +13,8 @@
         "from datasets import load_dataset\n",
         "from tqdm.auto import tqdm\n",
         "\n",
-        "from deep_mca.utils import disassemble_hex"
+        "from deep_mca.utils import disassemble_hex\n",
+        "from datasets import load_dataset"
       ]
     },
     {
@@ -46,11 +47,50 @@
         "    )\n",
         "\n",
         "pretrain_x86 = pd.DataFrame(results, columns=[\"instructions\", \"valid\"])\n",
-        "pretrain_x86.to_parquet(\"../data/pretrain_x86.parquet\", index=False)\n",
+        "pretrain_x86.to_parquet(\"../data/x86-pretrain-raw.parquet\", index=False)\n",
         "\n",
         "print(f\"Total rows: {len(pretrain_x86)}\")\n",
         "print(f\"Valid rows: {pretrain_x86['valid'].sum()}\")\n",
         "print(f\"Invalid rows: {(~pretrain_x86['valid']).sum()}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "95e32ec0",
+      "metadata": {},
+      "source": [
+        "Remove invalid rows:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e5e1df8f",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Total rows: 24442085\n",
+            "Valid rows: 23048454\n",
+            "Invalid rows: 1393631\n",
+            "Filtered rows: 23048454\n"
+          ]
+        }
+      ],
+      "source": [
+        "dataset = load_dataset(\"henryc13/x86-pretrain-raw\", split=\"train\")\n",
+        "df = dataset.to_pandas()\n",
+        "\n",
+        "print(f\"Total rows: {len(df)}\")\n",
+        "print(f\"Valid rows: {df['valid'].sum()}\")\n",
+        "print(f\"Invalid rows: {(~df['valid']).sum()}\")\n",
+        "\n",
+        "df_filtered = df[df[\"valid\"]].drop(columns=[\"valid\"]).reset_index(drop=True)\n",
+        "print(f\"Filtered rows: {len(df_filtered)}\")\n",
+        "\n",
+        "df_filtered.to_parquet(\"../data/x86-pretrain.parquet\", index=False)"
       ]
     }
   ],
