--- a/notebooks/convert_pretrain_dataset_to_x86.ipynb
+++ b/notebooks/convert_pretrain_dataset_to_x86.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "d07c397f",
       "metadata": {},
       "outputs": [],
@@ -13,8 +13,7 @@
         "from datasets import load_dataset\n",
         "from tqdm.auto import tqdm\n",
         "\n",
-        "from deep_mca.utils import disassemble_hex\n",
-        "from datasets import load_dataset"
+        "from deep_mca.utils import disassemble_hex"
       ]
     },
     {
